fixed sidebar height on mobile v2

--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -23,6 +23,7 @@
     position: static;
     width: 100vw;
     height: 35vh;
+    flex-basis: auto;
     height: calc(var(--vh, 1vh) * 35);
     padding: 2rem calc((100vw - 41.6rem) / 2) 2.5rem;
   }
